--- a/appengine-try-java-master/src/main/webapp/index.html
+++ b/appengine-try-java-master/src/main/webapp/index.html
@@ -10,7 +10,7 @@
     <script>
 $(document).ready(function() {
   $.getJSON('/demo', function(data) {
-    $('#result').html("Tri " + data.name);
+    $('#result').html("Lop123 " + data.name);
   });
 });
     </script>
