--- a/appengine-try-java-master/src/main/webapp/index.html
+++ b/appengine-try-java-master/src/main/webapp/index.html
@@ -10,7 +10,7 @@
     <script>
 $(document).ready(function() {
   $.getJSON('/demo', function(data) {
-    $('#result').html("Lop 17610TKS1" + data.name);
+    $('#result').html("	Tri" + data.name);
   });
 });
     </script>
